--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^11.2.10",
     "next": "14.2.3",
     "react": "^18",
+    "react-chrono": "^2.6.1",
     "react-dom": "^18"
   },
   "devDependencies": {
