--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.19",
     "framer-motion": "^11.2.10",
     "next": "14.2.3",
+    "pure-react-carousel": "^1.30.1",
     "react": "^18",
     "react-chrono": "^2.6.1",
     "react-dom": "^18"
