--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "pure-react-carousel": "^1.30.1",
     "react": "^18",
     "react-chrono": "^2.6.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "eslint": "^8",
